objects/IPM_Insurer_Review_Process__c.object
<CustomObject>
    <description>IPMG - Object representing Insurer Review Processes</description>
    <fields>
        <fullName>IPMP_Application_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Application Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_ASIC_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ASIC Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Insurer Review Processes</relationshipLabel>
        <relationshipName>Insurer_Review_Processes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IPM_Actuarial_Valuation_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Self-insurers are required to provide a copy of their reinsurance policy.</inlineHelpText>
        <label>Actuarial Valuation Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_All_Assessments_Complete_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All Assessments Complete Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_All_Assessments_Complete__c</fullName>
        <description>IF(  IPM_All_Assessments_Complete_Flag__c  = true, IMAGE(&quot;/servlet/servlet.FileDownload?file=0157F0000000xnK&quot;, &quot;Green Tick&quot;), IMAGE(&quot;/servlet/servlet.FileDownload?file=0157F0000000xnL&quot;, &quot;Red Cross&quot;))</description>
        <formula>If( RecordType.Name = &quot;Wage Declaration / Non Levy Notes&quot; || RecordType.Name = &quot;Review of Subsidiaries&quot;,&quot;N/A&quot;,
IF(  IPM_All_Assessments_Complete_Flag__c  = true, IMAGE(&quot;/servlet/servlet.FileDownload?file=0157F0000000xnK&quot;, &quot;Green Tick&quot;), IMAGE(&quot;/servlet/servlet.FileDownload?file=0157F0000000xnL&quot;, &quot;Red Cross&quot;))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All Assessments Complete</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_All_Documents_Received_Flag__c</fullName>
        <formula>IF(  ( RecordType.Name  = &quot;New Licence Application&quot; &amp;&amp;  IPM_New_Lic_App_Docs_Recd_Flag__c = true) ||
(RecordType.Name = &quot;Licence Renewal&quot; &amp;&amp; IPMP_Application_Form__c = true) ||
(RecordType.Name = &quot;Wage Declaration / Non Levy Notes&quot; &amp;&amp; IPM_Wage_Declaration__c = TRUE) ||
(RecordType.Name = &quot;LIBPG Business Plan&quot; &amp;&amp; IPM_Business_Plan__c = TRUE) ||
(RecordType.Name = &quot;MPPG Review&quot; &amp;&amp; IPM_Premium_Filings_Form__c = true) ||
(RecordType.Name = &quot;Claims Management Self Audit&quot; &amp;&amp; ISBLANK(IPM_Received_Date__c)=FALSE) ||
(RecordType.Name = &quot;Review of Subsidiaries&quot; &amp;&amp;    IPM_Review_Subsidiary_Doc_Received_Flag__c = true) ||
(RecordType.Name = &quot;WHS Audit&quot; &amp;&amp;  IPM_Ins_Conf_Recd__c = true &amp;&amp; IPM_SafeW_Conf_Recd__c = true) ||
(RecordType.Name = &quot;Annual Review&quot; &amp;&amp;   IPM_Ann_Rev_Docs_Recd_Flag__c  = true),
true, false)</formula>
        <label>All Documents Received Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_All_Documents_Received__c</fullName>
        <formula>IF( IPM_All_Documents_Received_Flag__c = true, IMAGE(&quot;/servlet/servlet.FileDownload?file=0157F0000000xnK&quot;, &quot;Green Tick&quot;), IMAGE(&quot;/servlet/servlet.FileDownload?file=0157F0000000xnL&quot;, &quot;Red Cross&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All Documents Received</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Ann_Rev_Docs_Recd_Flag__c</fullName>
        <formula>IF( 
AND(  IPM_Principal_Business_Operations__c  = true,
  IPM_Principal_and_Secondary_Persons__c   = true,
  IPM_Complaints_Contact__c   = true,
  IPM_Corporate_Structure__c   = true,
  IPM_Annual_Report__c   = true,
  IPM_Audited_Financial_Statements__c   = true,
  IPM_Independent_Auditor_Report__c   = true,
  IPM_Actuarial_Valuation_Report__c   = true,
  IPM_Reinsurance_Policy__c   = true,
   IPM_Business_Plan__c    = true)
, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Review Docs Received Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Annual_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Self-insurers must supply SIRA with a copy of their annual report including audited financial statements, an independent auditor report for the self-insurer, and ultimate Australian holding company (if different).</inlineHelpText>
        <label>Annual Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Annual_Reports__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Annual reports (including audited financial statements) for the previous four financial years. If the applicant is not the ultimate holding company in Australia, then the annual reports of the ultimate Australian holding company are to be provided.</inlineHelpText>
        <label>Annual Reports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Any_Other_Financial_Information__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Any other financial information including credit rating reports that will assist in supporting the application.</inlineHelpText>
        <label>Any Other Financial Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Any_Other_Information__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Any other information that would help SIRA consider the suitability and financial ability of the applicant.</inlineHelpText>
        <label>Any Other Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Application_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Application Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Approval__c</fullName>
        <label>Process Outcome</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Yet Approved</fullName>
                    <default>true</default>
                    <label>Not Yet Approved</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IPM_Audit_Completed_Date__c</fullName>
        <inlineHelpText>The date the audit was completed by the Insurer.</inlineHelpText>
        <label>Audit Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Audited_Financial_Statements__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>State government self-insurers must provide audited financial statements within four months of financial year end, once they are tabled in Parliament.</inlineHelpText>
        <label>Audited Financial Statements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Business_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Every self-insurer must provide a copy of the business plan for its NSW workers compensation insurance portfolio.</inlineHelpText>
        <label>Business Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_CEO_Written_Statement__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Written statement from the Chief Executive Officer outlining the reasons why the applicant is seeking to be licensed and its suitability to become a self-insurer.</inlineHelpText>
        <label>CEO Written Statement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Claims_Exp_and_Premiums_Paid_Sched__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>A schedule showing the claims experience and premiums paid for the past four years.</inlineHelpText>
        <label>Claims Exp. and Premiums Paid Sched.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Claims_Mgmt_Policies_Procedures__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Claims management policies and procedures.</inlineHelpText>
        <label>Claims Management Policies/Procedures</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Claims_Self_Audit_Doc_Received_Flag__c</fullName>
        <formula>IF( 
AND( ISBLANK(IPM_Received_Date__c)=FALSE) 
, true, false)</formula>
        <label>NOT USED Self Audit Doc Received Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Company_Secretary_Letter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Company Secretary Letter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Complaints_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Name and contact details of the principal person (or group) who will respond to complaints at:
- Complaints level 1 (initial enquiry)
- Complaints level 2 (follow up enquiry)</inlineHelpText>
        <label>Complaints Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.IPM_Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Insurer Review Processes</relationshipLabel>
        <relationshipName>Insurer_Review_Processes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IPM_Corporate_Structure__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Group self-insurers must also provide a schedule showing the names, ABNs and corporate structure of all wholly-owned subsidiary companies who are employers in NSW.</inlineHelpText>
        <label>Corporate Structure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Date_Approved__c</fullName>
        <description>Used for MPPG Process</description>
        <label>Date Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Date_Letter_Sent__c</fullName>
        <description>Used for MPPG Process</description>
        <label>Date Letter Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Draft_Business_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Draft business plan for applicant’s workers compensation operations, developed with reference to Requirements for self-insurer annual information.</inlineHelpText>
        <label>Draft Business Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Drawloop_Filter__c</fullName>
        <formula>If( RecordType.Name = &quot;Review of Subsidiaries&quot;,&quot;Schedule&quot;,
If( CONTAINS(TEXT(IPM_Account__r.IPM_Workplace_Insurer_Type__c),&quot;Self Insurer&quot;), &quot;Self Insurer&quot;,TEXT(IPM_Account__r.IPM_Workplace_Insurer_Type__c)
)
)</formula>
        <label>Drawloop Filter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Evidence_of_Non_Best_Practice__c</fullName>
        <description>For Claims Management Self Audit process</description>
        <label>Evidence of Non-Best Practice</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IPM_Evidence_of_Non_Compliance__c</fullName>
        <label>Evidence of Non-Compliance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IPM_First_Invoice_Due_Date__c</fullName>
        <label>First Invoice Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_First_Invoice_Notice_Date__c</fullName>
        <label>First Invoice Notice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_First_Invoice_Paid_Date__c</fullName>
        <label>First Invoice Paid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_First_Invoice_Sent_Date__c</fullName>
        <label>First Invoice Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Further_Information_Received_Date__c</fullName>
        <label>Further Information Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Further_Information_Requested_Date__c</fullName>
        <label>Further Information Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Further_Information_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Further Information Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Group_Corporate_Structure__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Details of the group corporate structure including principal shareholders of the applicant (and its wholly-owned subsidiaries that are employers if applying for a group self-insurer licence).</inlineHelpText>
        <label>Group Corporate Structure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Improvement_Plan_Received_Date__c</fullName>
        <label>Improvement Plan Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Improvement_Plan_Requested_Date__c</fullName>
        <label>Improvement Plan Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Improvement_Plan_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Improvement Plan Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Independent_Auditor_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Every self-insurer must provide a copy of its actuarial valuation report.</inlineHelpText>
        <label>Independent Auditor Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Injury_Management_Program_Date__c</fullName>
        <label>Injury Management Program Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Injury_Management_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Injury management program prepared in accordance with SIRA’s Injury Management Program – a guide and checklist for insurers under section 43 of the 1998 Act.</inlineHelpText>
        <label>Injury Management Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Ins_Conf_Recd__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Insurer Confirmation Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Insurer_Information__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Corporate name, Australian Business Number (ABN) and registered office of the applicant.</inlineHelpText>
        <label>Insurer Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Insurers_Scheme_Agents__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Name of insurer(s) or scheme agent(s) for NSW workers compensation for the past three years.</inlineHelpText>
        <label>Insurers/Scheme Agents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_LIBPG_Bus_Plan_Docs_Received_Flag__c</fullName>
        <formula>IF( 
AND(IPM_Business_Plan__c = TRUE) 
, true, false)</formula>
        <label>NOT USED Bus Plan Docs Received Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Licence_Renewal_Docs_Received_Flag__c</fullName>
        <formula>IF( IPMP_Application_Form__c = true , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Licence Renewal Docs Received Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Licence_Status__c</fullName>
        <formula>TEXT(IPM_Licence__r.IPM_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Licence Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Licence__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Licence</label>
        <referenceTo>GLS_Licence__c</referenceTo>
        <relationshipLabel>Insurer Review Processes</relationshipLabel>
        <relationshipName>Insurer_Review_Processes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IPM_MPPG_Review_Docs_Received_Flag__c</fullName>
        <formula>IF( IPM_Premium_Filings_Form__c = true, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MPPG Review Docs Received Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Nature_of_Business__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Nature of business undertakings of the employer (and across the group if applying for a group self-insurer licence).</inlineHelpText>
        <label>Nature of Business</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_New_Lic_App_Docs_Recd_Flag__c</fullName>
        <formula>IF( 
AND( IPM_Insurer_Information__c = true,
 IPM_CEO_Written_Statement__c  = true,
 IPM_Group_Corporate_Structure__c  = true,
 IPM_Nature_of_Business__c  = true,
 IPMP_Application_Form__c  = true,
 IPM_Application_Fee__c  = true,
 IPM_Draft_Business_Plan__c  = true,
 IPM_WIC_Wages_and_Deemed_Premium__c  = true,
 IPM_Insurers_Scheme_Agents__c  = true,
 IPM_Claims_Exp_and_Premiums_Paid_Sched__c  = true,
 IPM_Self_Insured_in_Other_Jurisdictions__c  = true,
 IPM_Senior_Staff_Members__c  = true,
 IPM_Proposed_Organisation_Structure__c  = true,
 IPM_Proposed_Administrative_Facilities__c  = true,
 IPM_Planned_Prof_Development_Program__c  = true,
 IPM_Return_to_Work_Co_ordinators__c  = true,
 IPM_Claims_Mgmt_Policies_Procedures__c  = true,
  IPM_Return_to_Work_Program__c = true,
 IPM_Injury_Management_Program__c  = true,
 IPM_Proposed_Claim_Mgmt_System_Processes__c  = true,
 IPM_Annual_Reports__c  = true,
 IPM_Any_Other_Information__c  = true,
 IPM_Any_Other_Financial_Information__c  = true,
 IPM_Signed_Declaration__c  = true,
 TEXT(IPM_Number_of_Employees__c) &lt;&gt; &quot;&quot;
)
, true, false)</formula>
        <label>New Licence App Docs Received Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Notification_of_Security_Reqt_Date__c</fullName>
        <label>Notification of Security Reqt Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Number_of_Employees__c</fullName>
        <inlineHelpText>Total number of employees in NSW, including persons deemed to be workers, employed by the applicant for the last three financial years (“employees” means all permanent staff of the applicant, whether full-time or part-time).</inlineHelpText>
        <label>Number of Employees</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IPM_Parent_Entity_Security_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For Review of Subsidiary process</description>
        <label>Parent Entity Security Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Planned_Prof_Development_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Details of the planned capability and professional development program for staff engaged in workers compensation activities.</inlineHelpText>
        <label>Planned Professional Development Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Premium_Filings_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Premium Filings Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Previous_Insurer__c</fullName>
        <label>Previous Insurer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Principal_Business_Operations__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Details of the principal business operations, including details of any corporate restructure.</inlineHelpText>
        <label>Principal Business Operations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Principal_and_Secondary_Persons__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Name and contact details of the principal and secondary persons for the receipt of SIRA correspondence including:
Position title
Telephone number
Email address
Mailing address
Street address</inlineHelpText>
        <label>Principal and Secondary Persons</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Process_Closed_Date__c</fullName>
        <label>Process Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Proposed_Administrative_Facilities__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Details of the proposed administrative facilities for handling workers compensation claims including staffing arrangements, secure and private record keeping and location.</inlineHelpText>
        <label>Proposed Administrative Facilities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Proposed_Claim_Mgmt_System_Processes__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Details of the (proposed) claims management systems and processes.</inlineHelpText>
        <label>Proposed Claims Mgmt System/Processes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Proposed_Organisation_Structure__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Proposed organisation structure of the claims management section including proposed number of claims per claims officer.</inlineHelpText>
        <label>Proposed Organisation Structure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_RSVP_Date__c</fullName>
        <description>Used for MPPG Process</description>
        <label>RSVP Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Received_Date__c</fullName>
        <label>Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Record_Type_Text__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Reinsurance_Policy__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Self-insurers are required to provide a copy of their reinsurance policy.</inlineHelpText>
        <label>Reinsurance Policy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Requested_Date__c</fullName>
        <label>Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Return_to_Work_Co_ordinators__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Details of the return to work co-ordinator(s) including name, previous positions held, qualifications and experience and names of accredited rehabilitation provider(s).</inlineHelpText>
        <label>Return to Work Co-ordinators</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Return_to_Work_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Return to work program prepared in accordance with SIRA’s Guidelines for Workplace Return to Work programs under section 52 of the Workplace Injury Management and Workers Compensation Act 1998 (1998 Act).</inlineHelpText>
        <label>Return to Work Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Review_Subsidiary_Doc_Received_Flag__c</fullName>
        <formula>IF( 
AND( IPM_Company_Secretary_Letter__c  = TRUE, IPM_ASIC_Review__c =TRUE) 
, true, false)</formula>
        <label>Review of Subsidiary Doc Received Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_S_Drive_Location__c</fullName>
        <label>S Drive Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_SafeW_Conf_Recd__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SafeWork Confirmation Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Score__c</fullName>
        <label>Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IPM_Second_Invoice_Due_Date__c</fullName>
        <label>Second Invoice Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Second_Invoice_Notice_Date__c</fullName>
        <label>Second Invoice Notice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Second_Invoice_Paid_Date__c</fullName>
        <label>Second Invoice Paid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Second_Invoice_Sent_Date__c</fullName>
        <label>Second Invoice Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Security_Lodged__c</fullName>
        <label>Security Lodged</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IPM_Security_Lodgement_Date__c</fullName>
        <label>Security Lodgement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Self_Audit_Report_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Self Audit Report Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Self_Insured_in_Other_Jurisdictions__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Whether the applicant is self-insured in other jurisdictions.</inlineHelpText>
        <label>Self-Insured in Other Jurisdictions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Senior_Staff_Members__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Details of senior staff member(s) who will be responsible for workers compensation claims management and administration under self-insurance. These details include name, previous positions held, qualifications and experience.</inlineHelpText>
        <label>Senior Staff Members</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Signed_Declaration__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Completed and signed declaration.</inlineHelpText>
        <label>Signed Declaration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Request</fullName>
                    <default>true</default>
                    <label>Request</label>
                </value>
                <value>
                    <fullName>Gather</fullName>
                </value>
                <value>
                    <fullName>Assess</fullName>
                </value>
                <value>
                    <fullName>Decide</fullName>
                    <label>Approve</label>
                </value>
                <value>
                    <fullName>Stop</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IPM_Subsidiary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subsidiary</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Subsidiary</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Insurer Review Processes (Subsidiary)</relationshipLabel>
        <relationshipName>Insurer_Review_Processes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IPM_Sufficient_Security_Lodged_Date__c</fullName>
        <inlineHelpText>Use this date for both increase and reduction in security</inlineHelpText>
        <label>Sufficient Security Lodged Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Summary__c</fullName>
        <formula>&quot;Documents: &quot; &amp;  IPM_All_Documents_Received__c &amp; &quot; Assessments: &quot; &amp;  IPM_All_Assessments_Complete__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Total_Levy_Amount__c</fullName>
        <label>Total Levy Amount</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IPM_Total_Wages__c</fullName>
        <description>Used in the Wages Declaration Process</description>
        <label>Total Wages</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IPM_WIC_Codes_Correct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WIC Codes Correct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_WIC_Wages_and_Deemed_Premium__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Workers compensation industry classifications, wages and deemed premium calculation for the current year and the estimated deemed premium for the next financial year (in order to determine the initial security to be provided).</inlineHelpText>
        <label>WIC, Wages and Deemed Premium</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Wage_Dec_Docs_Received_Flag__c</fullName>
        <formula>IF( 
AND( IPM_Wage_Declaration__c  = TRUE) 
, true, false)</formula>
        <label>NOT USED Wage Dec Docs Received Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Wage_Declaration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Document received</description>
        <label>Wage Declaration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Security_Level_Review__c</fullName>
        <label>Security Level Review</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>More Security</fullName>
                </value>
                <value>
                    <fullName>Less Security</fullName>
                </value>
                <value>
                    <fullName>No Changes to Security</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subsidiary_Action__c</fullName>
        <label>Subsidiary Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Addition</fullName>
                </value>
                <value>
                    <fullName>Removal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Insurer Review Process</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>IPM_Account__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>IPM_All_Documents_Received__c</columns>
        <columns>IPM_Status__c</columns>
        <columns>IPM_Approval__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>IPM_Licence__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>